--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     <title>@ViewData["Title"] - Accounter</title>
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -17,7 +16,11 @@
     <header>
         <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Accounter</a>
+            
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <img src="~/images/logo.png">
+                Accounter
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,6 +49,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - Accounter - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a href="https://icons8.com/icon/3S2oxo1xZqhQ/transaction">Transaction icon by Icons8</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
