--- a/AccounterApplication.Web/Views/Shared/_LoginPartial.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_LoginPartial.cshtml
@@ -10,9 +10,7 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link text-dark" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
                 <span class="mr-2 d-none d-lg-inline text-gray-600">Hello @User.Identity.Name!</span>
-                <i class="material-icons">
-                    account_box
-                </i>
+                <img src="~/images/user-male.png">
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
