Added css files, new user logo, changes in layout and login partial

--- a/AccounterApplication.Web/wwwroot/css/site.css
+++ b/AccounterApplication.Web/wwwroot/css/site.css
@@ -91,3 +91,12 @@ body {
     /* Support for IE. */
     font-feature-settings: 'liga';
 }
+
+
+.fa-search::before {
+    content: "\f002";
+}
+
+.fa, .fas {
+    font-weight: 900;
+}
