--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -9,14 +9,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="~/css/site.css" type="text/css" />
+    <link rel="stylesheet" href="~/css/all.min.css" type="text/css">
+    <link rel="stylesheet" href="css/sb-admin-2.min.css" type="text/css" >
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-            
+
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="~/images/logo.png">
                 Accounter
@@ -29,14 +32,16 @@
             <!-- Topbar Navbar -->
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <partial name="_LoginPartial" />
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
-                </ul>
+                @*<ul class="navbar-nav flex-grow-1">
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                </li>
+            </ul>*@
             </div>
         </nav>
     </header>
@@ -50,6 +55,8 @@
         <div class="container">
             &copy; 2020 - Accounter - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             <a href="https://icons8.com/icon/3S2oxo1xZqhQ/transaction">Transaction icon by Icons8</a>
+            <a href="https://icons8.com/icon/ARWy_JjgohtA/customer">Customer icon by Icons8</a>
+
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
