Added Monthly Income Table, Auto Mapper Project, changes in Controllers

--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="~/css/all.min.css" type="text/css">
-    <link rel="stylesheet" href="css/sb-admin-2.min.css" type="text/css" >
+    <link rel="stylesheet" href="~/css/sb-admin-2.min.css" type="text/css" >
     <link rel="stylesheet" href="~/css/site.css" type="text/css" />
 
 </head>
@@ -170,7 +170,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="p-0">
             @RenderBody()
         </main>
     </div>
