--- a/AccounterApplication.Web/Views/Shared/_LoginPartial.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_LoginPartial.cshtml
@@ -14,11 +14,11 @@
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" asp-controller="Users" asp-action="Overview">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Profile
                 </a>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="/Identity/Account/Manage">
                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                     Settings
                 </a>
