--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Expenses" asp-action="Index">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-table"></i>
                     <span>Expenses</span>
                 </a>
             </li>
@@ -48,12 +48,11 @@
 
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Incomes" asp-action="Index">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-chart-area"></i>
                     <span>Incomes</span>
                 </a>
             </li>
 
-            <!-- Divider -->
             <hr class="sidebar-divider">
 
             <div class="text-center d-none d-md-inline">
