--- a/AccounterApplication.Web/Views/_ViewImports.cshtml
+++ b/AccounterApplication.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using AccounterApplication.Web
-@using AccounterApplication.Web.Controllers.Models
+@using AccounterApplication.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
