Added Expenses Overview view

--- a/AccounterApplication.Web/Views/Expenses/Index.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/Index.cshtml
@@ -1,7 +1,58 @@
-﻿
+﻿@using AccounterApplication.Web.ViewModels.Expenses
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+@model ExpensesListingViewModel
 
+@section Styles
+{
+    <link rel="stylesheet" href="~/css/dataTables.bootstrap4.min.css" type="text/css" />
+}
+
+
+<h1>Expenses</h1>
+
+<div class="card shadow mb-4">
+    <div class="card-header py-3 bg-gradient-primary">
+        <h6 class="m-0 font-weight-bold text-light">Expenses</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Description</th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    @foreach (var expense in Model.Expenses)
+                    {
+                        <tr>
+                            <td>@expense.CreatedOn</td>
+                            <td>@expense.ExpenseAmount</td>
+                            <td>@expense.Description</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+@section Scripts
+{
+    <script src="~/js/jquery/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/js/jquery/datatables//dataTables.bootstrap4.min.js"></script>
+    <script src="~/js/datatables.js"></script>
+}
