--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -16,12 +16,14 @@
         <link rel="stylesheet" href="~/css/site.css" type="text/css" />
     </environment>
     @*<environment names="Staging,Production">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-        <link rel="stylesheet" href="~/css/all.min.css" type="text/css">
-        <link rel="stylesheet" href="~/css/sb-admin-2.min.css" type="text/css">
-        <link rel="stylesheet" href="~/css/site.css" type="text/css" />
-    </environment>*@
+            <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+            <link rel="stylesheet" href="~/css/all.min.css" type="text/css">
+            <link rel="stylesheet" href="~/css/sb-admin-2.min.css" type="text/css">
+            <link rel="stylesheet" href="~/css/site.css" type="text/css" />
+        </environment>*@
+
+    @RenderSection("Styles", required: false)
 
 </head>
 <body>
@@ -79,7 +81,7 @@
                         </div>
                     </nav>
                 </header>
-                <div class="container">
+                <div class="container-fluid">
                     <partial name="_CookieConsentPartial" />
                     <main role="main" class="p-0">
                         @RenderBody()
@@ -106,14 +108,14 @@
         <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
     </environment>
     @*<environment names="Staging,Production">
-        <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript" asp-append-version="true"></script>
-        <script src="~/js/jquery/jquery.min.js" type="text/javascript" asp-append-version="true"></script>
-        <script src="~/js/jquery/jquery.easing.min.js" type="text/javascript" asp-append-version="true"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" type="text/javascript" asp-append-version="true"></script>
-        <script src="~/js/sb-admin-2.min.js" type="text/javascript" asp-append-version="true"></script>
-        <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
-    </environment>*@
-    
+            <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript" asp-append-version="true"></script>
+            <script src="~/js/jquery/jquery.min.js" type="text/javascript" asp-append-version="true"></script>
+            <script src="~/js/jquery/jquery.easing.min.js" type="text/javascript" asp-append-version="true"></script>
+            <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" type="text/javascript" asp-append-version="true"></script>
+            <script src="~/js/sb-admin-2.min.js" type="text/javascript" asp-append-version="true"></script>
+            <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
+        </environment>*@
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
