Added Submenus in layout

--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -46,22 +46,30 @@
                 </a>
             </li>
 
-            <hr class="sidebar-divider my-0">
-
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Expenses" asp-action="Index">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseExpenses" aria-expanded="true" aria-controls="collapseExpenses">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Expenses</span>
                 </a>
+                <div id="collapseExpenses" class="collapse" aria-labelledby="headingExpenses" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" asp-controller="Expenses" asp-action="Index">Overview</a>
+                        <a class="collapse-item" asp-controller="Expenses" asp-action="AddExpense">Add Expense</a>
+                    </div>
+                </div>
             </li>
 
-            <hr class="sidebar-divider my-0">
-
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Incomes" asp-action="Index">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseIncomes" aria-expanded="true" aria-controls="collapseIncomes">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Incomes</span>
                 </a>
+                <div id="collapseIncomes" class="collapse" aria-labelledby="headingIncomes" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" asp-controller="Income" asp-action="Index">Overview</a>
+                        <a class="collapse-item" asp-controller="Income" asp-action="AddIncome">Add Income</a>
+                    </div>
+                </div>
             </li>
 
             <hr class="sidebar-divider">
@@ -81,7 +89,7 @@
                         </div>
                     </nav>
                 </header>
-                <div class="container-fluid">
+                <div class="container">
                     <partial name="_CookieConsentPartial" />
                     <main role="main" class="p-0">
                         @RenderBody()
