--- a/AccounterApplication.Web/Views/Home/Index.cshtml
+++ b/AccounterApplication.Web/Views/Home/Index.cshtml
@@ -3,10 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Accounter</h1>
 </div>
-
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -28,3 +26,5 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+
