--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -103,6 +103,7 @@
                 </header>
                 <div class="container">
                     <partial name="_CookieConsentPartial" />
+                    <partial name="_AlertMessagesPartial" />
                     <main role="main" class="p-0">
                         @RenderBody()
                     </main>
@@ -113,7 +114,6 @@
                     <div class="copyright text-center my-auto">
                         <span>Copyright &copy; 2020 - @SystemConstants.SystemName</span>
                         <a class="icons8" href="https://icons8.com/icon/3S2oxo1xZqhQ/transaction">Transaction icon by Icons8</a>
-                        <a class="icons8" href="https://icons8.com/icon/ARWy_JjgohtA/customer">Customer icon by Icons8</a>
                     </div>
                 </div>
             </footer>
