--- a/AccounterApplication.Web/wwwroot/css/site.css
+++ b/AccounterApplication.Web/wwwroot/css/site.css
@@ -18,6 +18,10 @@ a {
   border-color: #1861ac;
 }
 
+.btn-no-shadow {
+    box-shadow: none !important;
+}
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
@@ -94,4 +98,8 @@ body {
 
 .icons8 {
     font-size: 10px;
+}
+
+.fa-trash:hover:before {
+    color: red;
 }
