--- a/AccounterApplication.Web/Views/Expenses/Index.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AccounterApplication.Web.ViewModels.Expenses
+@using AccounterApplication.Web.Controllers
 
 @{
     ViewData["Title"] = "Index";
@@ -13,45 +14,43 @@
 
 <h1>Expenses</h1>
 
-<div class="card shadow mb-4">
-    <div class="card-header py-3 bg-gradient-primary">
-        <h6 class="m-0 font-weight-bold text-light">Expenses</h6>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Amount</th>
-                        <th>Description</th>
+<div class="card shadow-lg mb-lg-4">
+    <div class="table-responsive">
+        <table class="table table-borderless table-hover" cellspacing="0">
+            <thead class="card-header py-3 thead-light text-gray-200">
+                <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Amount</th>
+                    <th scope="col">Description</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var expense in Model.Expenses)
+                {
+                    <tr class="text-gray-800">
+                        <td class="cell-clickable-edit" data-url="@Url.Action("EditExpense", "Expenses")" data-id="@expense.Id">@expense.CreatedOn</td>
+                        <td class="cell-clickable-edit" data-url="@Url.Action("EditExpense", "Expenses")" data-id="@expense.Id">@expense.ExpenseAmount</td>
+                        <td class="cell-clickable-edit" data-url="@Url.Action("EditExpense", "Expenses")" data-id="@expense.Id">@expense.Description</td>
+                        <td>
+                            <a href="#" class="btn btn-no-shadow trigger-delete"
+                               data-id="@expense.Id"
+                               data-controller="@nameof(ExpensesController).Replace(nameof(Controller), string.Empty)"
+                               data-action="@nameof(ExpensesController.DeleteExpense)"
+                               data-body-message="You are about to delete an Expense. Click Continue to proceed."
+                               data-redirect-url="@Url.Action(nameof(ExpensesController.Index), nameof(ExpensesController).Replace(nameof(Controller), string.Empty))">
+                                <i class="fas fa-trash"></i>
+                            </a>
+                        </td>
                     </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <th>Date</th>
-                        <th>Amount</th>
-                        <th>Description</th>
-                    </tr>
-                </tfoot>
-                <tbody>
-                    @foreach (var expense in Model.Expenses)
-                    {
-                        <tr>
-                            <td>@expense.CreatedOn</td>
-                            <td>@expense.ExpenseAmount</td>
-                            <td>@expense.Description</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
 
 @section Scripts
 {
-    <script src="~/js/jquery/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/js/jquery/datatables//dataTables.bootstrap4.min.js"></script>
-    <script src="~/js/datatables.js"></script>
+    <script src="~/js/custom/edit.js" type="text/javascript" asp-append-version="true"></script>
+    <script src="~/js/custom/delete.js" type="text/javascript" asp-append-version="true"></script>
 }
