--- a/AccounterApplication.Web/wwwroot/css/site.css
+++ b/AccounterApplication.Web/wwwroot/css/site.css
@@ -106,3 +106,55 @@ body {
 .fa-trash:hover:before {
     color: red;
 }
+
+/*Language Toggle*/
+
+.slider-v3 {
+    position: relative;
+    display: block;
+    width: 3.5em;
+    height: 1.5em;
+    cursor: pointer;
+    border-radius: 1.5em;
+    transition: 350ms;
+    background: #ddd;
+}
+
+    .slider-v3::after {
+        position: absolute;
+        content: '';
+        width: 1em;
+        height: 1em;
+        top: 0.25em;
+        left: 0.5em;
+        border-radius: 1.5em;
+        transition: width 200ms ease-out, height 300ms 50ms ease-in, top 300ms 50ms ease-in, left 250ms 50ms ease-in, background 300ms ease-in, box-shadow 300ms ease-in;
+        background: #f2f2f2;
+        box-shadow: 0 0 0 1.5em #f2f2f2 inset;
+    }
+
+input:checked + .slider-v3::after {
+    width: 1em;
+    height: 1em;
+    top: 0.25em;
+    left: 2em;
+    background: #f2f2f2;
+    box-shadow: 0 0 0 0 #f2f2f2 inset;
+}
+
+.margin-15 {
+    margin: 1.5em auto;
+}
+
+.switch-label-left {
+    padding-right: 0.2em;
+}
+
+.switch-label-right {
+    padding-left: 0.2em;
+}
+
+.switch-input {
+    position: absolute;
+    left: -9999px;
+}
