--- a/AccounterApplication.Web/Views/Home/Index.cshtml
+++ b/AccounterApplication.Web/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@inject IViewLocalizer Localizer
+
+@{
+    ViewData["Title"] = Localizer["Home Page"];
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Accounter</h1>
+    <h1 class="display-4">@Localizer["Welcome to Accounter"]</h1>
 </div>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
