--- a/AccounterApplication.Web/Views/_ViewImports.cshtml
+++ b/AccounterApplication.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AccounterApplication.Web
 @using AccounterApplication.Web.ViewModels
+@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
