--- a/AccounterApplication.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/AccounterApplication.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using AccounterApplication.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using AccounterApplication.Data.Models
+@using Microsoft.AspNetCore.Mvc.Localization
