--- a/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             <label asp-for="IncomePeriod"></label>
-            <input asp-for="IncomePeriod" class="form-control" />
+            <input asp-for="IncomePeriod" class="form-control" data-val="false" />
             <span asp-validation-for="IncomePeriod" class="text-danger"></span>
         </div>
         <div class="modal-footer">
